<resources>
    <string name="app_name">Backendless Research</string>
    <string name="title_persons">Persons</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="done">Done</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="please_login_or_register">Please login or register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login_or_register">Login or register</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="i_have_account">I have account</string>
    <string name="fill_all_fields">Fill in all the fields</string>
</resources>