<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.levgeogr.backendlessresearch.ui.account.auth.LoginVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        tools:context=".ui.account.auth.LoginFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrap_email_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEMail_et"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="@={vm.email}"
                tools:text="sample@mail.co" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrap_login_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/wrap_email_et"
            app:layout_constraintStart_toStartOf="@+id/wrap_email_et"
            app:layout_constraintTop_toBottomOf="@+id/wrap_email_et">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@={vm.password}"
                tools:text="12345678" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/accountExistsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="@={vm.isAccountExists}"
            android:text="@string/i_have_account"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/wrap_login_et"
            app:layout_constraintTop_toBottomOf="@+id/wrap_login_et" />

        <Button
            android:id="@+id/authButton"
            style="@style/MainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.loginRegistrationButtonClicked()}"
            app:buttonTextHandler="@{vm.isAccountExists}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/loginProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:loginProgressVisible="@{vm.isLoading}" />

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountExistsCheckBox"
            tools:text="Some errors list" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>